--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: hsl(330, 100%, 75%);
     font-family: "DejaVu Sans", Verdana, sans-serif;
 }
+
+#second {
+    color: hsl(220, 100%, 50%);
+    font-size: 36px;
+}
